# spectral-saturation

./: .gitignore  Makefile  README.md  breast_cancer.npz  environment.yml  pyproject.toml  run_all.py  run_all_experiments.py  spectral copy.ipynb  spectral.ipynb
analyses/: __init__.py  _shared.py  ablations.py  active_learning.py  clip_dense.py  clip_sweeps.py  multistat.py  pca_sweeps.py  persist_per_task_spearman.py  tau_transfer.py  theory_empirical_bridge.py
archive/: spectral_original.ipynb
figures/: paper_tables.tex
notebooks/: 01_experiments.ipynb  02_statistics.ipynb  03_ablations.ipynb
results/: ablation_classifier_results.json  ablation_pca_results.json  ablation_reg_results.json  all_results.json  all_results_multistat.json  clip_vitb32_binary_results.json  clip_vitb32_dense_results.json  clip_vitl14_binary_results.json  clip_vitl14_dense_results.json  extra_binary_results.json  nway_clip_results.json  nway_pca_results.json  per_task_spearman.json  theory_empirical_bridge.json
results/old_cache/: ablation_pca_results.json  ablation_reg_results.json  all_results.json
src/: __init__.py  active_learning.py  clip_features.py  datasets.py  experiment.py  figures.py  geometry.py  metrics.py  protocols.py  saturation.py  statistics.py  tau_transfer.py  visualization.py
